tests/ui/rust-2024/unsafe-extern-blocks/unsafe-extern-suggestion.stderr
error: extern blocks should be unsafe
  --> $DIR/unsafe-extern-suggestion.rs:6:1
   |
LL |   extern "C" {
   |   ^
   |   |
   |  _help: needs `unsafe` before the extern keyword: `unsafe`
   | |
LL | |
LL | |
LL | |     static TEST1: i32;
LL | |     fn test1(i: i32);
LL | | }
   | |_^
   |
   = warning: this is accepted in the current edition (Rust 2015) but is a hard error in Rust 2024!
   = note: for more information, see <https://doc.rust-lang.org/edition-guide/rust-2024/unsafe-extern.html>
note: the lint level is defined here
  --> $DIR/unsafe-extern-suggestion.rs:3:9
   |
LL | #![deny(missing_unsafe_on_extern)]
   |         ^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 1 previous error

